8227040: [lworld][c1] Must repair stack frame before calling buffer_value_args

Reviewed-by: thartmann